--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
+/******** BASE **********/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+}
+
 body {
   background-color: teal;
 }
