--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,9 @@
 
 body {
   font-family: sans-serif;
+  background-color: teal;
+  height: 100vh;
+  width: 100%;
 }
 
-body {
-  background-color: teal;
-}
+body {}
